--- a/src/styles/Footer.css
+++ b/src/styles/Footer.css
@@ -5,4 +5,68 @@
 	box-shadow: 0px 0px 15px 2px #42464B;
 	border-top-left-radius: 50px;
 	border-top-right-radius: 50px;
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+}
+
+.footer .footer__energy {
+	display: flex;
+	gap: 10px;
+	align-items: center;
+}
+
+.footer .footer__energy .energy__info {
+	color: white;
+}
+
+.footer .footer__energy .energy__info .info__this {
+	font-size: 14px;
+}
+
+.footer .footer__energy .energy__info .info__hour {
+	color: gray;
+	font-size: 12px;
+}
+
+.footer .footer__navigation {
+	display: flex;
+	gap: 10px;
+}
+
+.footer .footer__navigation a {
+	text-decoration: none;
+	color: white;
+}
+
+.footer .footer__navigation .navigation__item {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	gap: 5px;
+	width: 50px;
+	height: 50px;
+	border-radius: 100%;
+	justify-content: center;
+	box-shadow: 0px 0px 5px 2px #42464B;
+}
+
+.footer .footer__navigation .navigation__item .item__name {
+	font-size: 10px;
+}
+
+@media only screen and (min-width: 576px) {
+	.footer .footer__energy .energy__info .info__this {
+		font-size: 18px;
+	}
+	.footer .footer__energy .energy__info .info__hour {
+		font-size: 16px;
+	}
+	.footer .footer__navigation .navigation__item {
+		width: 60px;
+		height: 60px;
+	}
+	.footer .footer__navigation .navigation__item .item__name {
+		font-size: 14px;
+	}
 }
