--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -58,3 +58,15 @@
 	font-weight: 700;
 	font-size: 14px;
 }
+
+@media only screen and (min-width: 576px){
+	.header .wrapper .wrapper__profile .profile__info .info__name{
+		font-size: 18px;
+	}
+	.header .wrapper .wrapper__profile .profile__info .info__coins {
+		font-size: 16px;
+	}
+	.header .wrapper .wrapper__status .status__name {
+		font-size: 18px;
+	}
+}
