--- a/src/styles/Coin.scss
+++ b/src/styles/Coin.scss
@@ -15,7 +15,7 @@
   height: 250px;
   min-height: 300px;
   border-radius: 50%;
-  background-image: url('../assets/coin.png');
+  background-image: url('../assets/coin.webp');
   font-size: 72px;
   font-weight: bold;
   text-align: center;
