--- a/src/styles/Coin.scss
+++ b/src/styles/Coin.scss
@@ -11,11 +11,11 @@
 }
 .notcoin {
   width: 300px;
-  min-width: 270px;
+  min-width: 320px;
   height: 250px;
   min-height: 300px;
-  border-radius: 50%;
-  background-image: url('../assets/coin.webp');
+  border-radius: 100%;
+  background-image: url('../assets/coin_big.webp');
   font-size: 72px;
   font-weight: bold;
   text-align: center;
