--- a/src/styles/footer.scss
+++ b/src/styles/footer.scss
@@ -3,21 +3,26 @@
 	bottom: 0;
 	left: 0;
 	width: 100%;
-	padding: 10px 20px;
-	height: 140px;
+	padding: 10px 15px;
+	height: 150px;
 	z-index: 999;
 }
 
 .footer .footer__wrapper {
 	display: flex;
 	flex-direction: column;
-	gap: 15px;
+	gap: 20px;
+	align-items: center;
 }
 
 .footer .footer__wrapper .footer__top {
 	display: flex;
 	align-items: center;
 	justify-content: space-between;
+	gap: 5px;
+	width: 100%;
+	max-width: 500px;
+	gap: 10px;
 }
 
 .footer .footer__wrapper .footer__top .top__energy{
@@ -26,8 +31,8 @@
 }
 
 .footer .footer__wrapper .footer__top .top__energy .energy__icon {
-	width: 40px;
-	height: 40px;
+	width: 30px;
+	height: 25px;
 }
 
 .footer .footer__wrapper .footer__top .top__energy .energy__info {
@@ -37,59 +42,59 @@
 }
 
 .footer .footer__wrapper .footer__top .top__energy .energy__info .info__this {
-	font-size: 20px;
-	font-weight: bold;
+	font-size: 1 rem;
+	font-weight: 800;
+	line-height: 25px;
 	color: white;
 }
 
-.footer .footer__wrapper .footer__top .top__energy .energy__info .info__hour {
-	font-size: 14px;
-	color:#C1C1C1;
-}
-
-.footer .footer__wrapper .footer__top .top__navigation {
-	width: 67%;
+.footer .footer__wrapper .footer__navigation {
+	width: 100%;
 	background-color: #F4AB5D;
 	border: 2px solid rgba(218, 218, 218, 0.03);
 	display: flex;
 	align-items: center;
-	border-radius: 15px;
+	border-radius: 20px;
+	max-width: 500px;
 }
 
-.footer .footer__wrapper .footer__top .top__navigation .navigation-item {
+.footer .footer__wrapper .footer__navigation .navigation-item {
 	display: flex;
 	flex-direction: column;
 	width: 33%;
 	justify-content: center;
 	align-items: center;
-	padding: 10px 10px;
+	padding: 7.5px 10px;
+	gap: 2px;
 }
 
-.footer .footer__wrapper .footer__top .top__navigation .navigation-item .item__icon {
+.footer .footer__wrapper .footer__navigation .navigation-item .item__icon {
 	width: 28px;
 	height: 28px;
 }
 
-.footer .footer__wrapper .footer__top .top__navigation .navigation-item .item__name {
+.footer .footer__wrapper .footer__navigation .navigation-item .item__name {
 	color: white;
+	font-size: 0.8rem;
 	font-size: bold;
 }
 
-.footer .footer__wrapper .footer__top .top__navigation .tree {
+.footer .footer__wrapper .footer__navigation .tree {
 	height: 50px;
 	min-width: 2px;
 	background: #FCBB69;
 }
 
-.footer .footer__wrapper .footer__progress {
+.footer .footer__wrapper .footer__top .top__progress {
 	width: 100%;
-	height: 20px;
+	height: 15px;
 	border-radius: 20px;
-	background: #787878;
+	background: #F0913F;
 }
 
-.footer .footer__wrapper .footer__progress .progress__bar{
+.footer .footer__wrapper .footer__top .top__progress .progress__bar{
 	height: 100%;
 	background: rgb(185,103,0);
 	background: linear-gradient(90deg, #FB9606 0%, rgba(253,237,201,1) 100%);
+	border-radius: 20px;
 } 
