--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -1,15 +1,17 @@
 .header {
-	padding: 10px 20px;
+	padding: 17.5px 15px;
 	position: absolute;
 	top: 0;
 	left: 0;
 	width: 100%;
 	height: 100px;
 	z-index: 999;
+	display: flex;
+	justify-content: center;
 }
 
 .header .header__wrapper {
-	background-color: #1F1F1F;
+	background-color: #1E1C1F;
 	width: 100%;
 	height: 100%;
 	border-radius: 15px;
@@ -17,11 +19,14 @@
 	align-items: center;
 	justify-content: space-between;
 	padding: 20px;
+	border: 1px solid #111111;
+	box-shadow: 0px 0px 2px 0px rgba(255, 255, 255, 0.075);
+	max-width: 500px;
 }
 
 .header .header__wrapper .wrapper__leader {
 	display: flex;
-	gap: 5px;
+	gap: 10px;
 	align-items: center;
 	justify-content: center;
 }
@@ -29,26 +34,35 @@
 .header .header__wrapper .wrapper__leader .leader__icon {
 	width: 48px;
 	height: 48px;
-	border-radius: 5px;
+	border-radius: 10px;
 }
 
 .header .header__wrapper .wrapper__leader .leader__info {
 	display: flex;
 	flex-direction: column;
-	justify-content: center;
 	color: white;
+	justify-content: center;
+	gap: 5px;
+	height: 48px;
 }
 
-.header .header__wrapper .wrapper__leader .leader__info .info__name {
-	font-weight: 600;
+.header .header__wrapper .wrapper__leader .leader__info .info__name{
+	font-weight: 600!important;
+	font-size: 17px;
+}
+
+.header .header__wrapper .wrapper__leader .leader__info .info__name font{
+	font-weight: 600!important;
+	font-size: 17px;
 }
 
 .header .header__wrapper .wrapper__leader .leader__info .info__count {
-	font-size: 14px;
-	color: #C1C1C1;
+	font-size: 15px;
+	color: white;
 	display: flex;
 	gap: 2px;
 	align-items: center;
+	font-weight: 600;
 }
 
 .header .header__wrapper .wrapper__leader .leader__info .info__count img {
@@ -61,10 +75,15 @@
 	align-items: center;
 	gap: 5px;
 	color: white;
+	font-size: 15px;
+	font-weight: 600;
 }
 
-@media only screen and (max-width: 360px){
+@media only screen and (max-width: 385px) {
 	.header .header__wrapper .wrapper__leader .leader__info .info__name {
+		font-size: 14px;
+	}
+	.header .header__wrapper .wrapper__leader .leader__info .info__name font{
 		font-size: 14px;
 	}
 	.header .header__wrapper .wrapper__leader .leader__info .info__count {
@@ -75,8 +94,11 @@
 	}
 }
 
-@media only screen and (max-width: 320px){
+@media only screen and (max-width: 345px) {
 	.header .header__wrapper .wrapper__leader .leader__info .info__name {
+		font-size: 12px;
+	}
+	.header .header__wrapper .wrapper__leader .leader__info .info__name font{
 		font-size: 12px;
 	}
 	.header .header__wrapper .wrapper__leader .leader__info .info__count {
