--- a/src/styles/footer.scss
+++ b/src/styles/footer.scss
@@ -90,6 +90,7 @@
 	height: 15px;
 	border-radius: 20px;
 	background: #F0913F;
+	overflow: hidden;
 }
 
 .footer .footer__wrapper .footer__top .top__progress .progress__bar{
