--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -18,6 +18,10 @@
   user-select: none;
 }
 
+body, html {
+  overflow-y: hidden;
+}
+
 // @media only screen and (min-width: 768px){
 // 	html {
 // 		display: flex;
