--- a/src/styles/footer.scss
+++ b/src/styles/footer.scss
@@ -58,6 +58,10 @@
 	max-width: 500px;
 }
 
+.footer .footer__wrapper .footer__navigation a {
+	text-decoration: none;
+}
+
 .footer .footer__wrapper .footer__navigation .navigation-item {
 	display: flex;
 	flex-direction: column;
